# StashFlow

./: .gitignore  .gitleaks.toml  .vercelignore  GEMINI.md  LICENSE.md  PROJECT.md  README.md  audit.sh  deno.json  docker-compose.logging.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prototype.html  security.md  setup.sh  sonar-project.properties  tsconfig.base.json  turbo.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  deploy-prod.yml.disabled  deploy-test.yml  deploy-test.yml.disabled  rollback-prod.yml.disabled
.husky/: pre-commit
apps/backend-py/: .coverage  .env.example  Dockerfile  README.md  coverage.xml  package.json  pyproject.toml  worker.py
apps/backend-py/scripts/: export_schema.py
apps/backend-py/src/: main.py
apps/backend-py/src/api/: router.py
apps/backend-py/src/api/endpoints/: __init__.py  analysis.py  documents.py  transactions.py
apps/backend-py/src/core/: ai.py  config.py  document_service.py  logger.py  queue.py
apps/backend-py/src/schemas/: financial.py
apps/backend-py/src/tasks/: document_processing.py
apps/backend-py/src/utils/: ocr.py
apps/backend-py/tests/: conftest.py  test_analysis.py  test_documents.py  test_health.py  test_transactions.py
apps/mobile/: App.tsx  app.json  package.json  (+6 more)
docs/: API.md  ARCHITECTURE.md  AUDIT_IMPLEMENTATION_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  DATA_MODEL.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  HANDOFF_TESTING_GUIDE.md  HARDENING_SUMMARY.md  OPERATIONS.md  PYTHON_EXPLORATION.md  README.md  ROADMAP.md  SECURITY.md  SYSTEM.md  VULNERABILITIES.md  agentic.md  api.md  dashboard-redesign.md  dti-reference.docx  future-plans.md  p2-e-plan.md  plan.md  security.md  testing-strategy.md
supabase/: .env.example  config.toml  seed.sql
terraform/: .gitignore  main.tf  outputs.tf  providers.tf  test.tfvars.example  variables.tf
(+292 files in other folders)
