[project]
name = "backend-py"
version = "0.1.0"
description = "StashFlow Python Intelligence Layer"
authors = [{ name = "StashFlow Team" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.23.2",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.0.3",
    "pymupdf>=1.23.5",
    "instructor>=1.15.1",
    "litellm>=1.83.14",
    "pytesseract>=0.3.10",
    "pdf2image>=1.16.3",
    "Pillow>=10.0.0",
    "python-multipart>=0.0.12",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "structlog>=24.1.0",
    "asgi-correlation-id>=4.3.0",
    "sentry-sdk[fastapi]>=1.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "ruff>=0.15.12",
    "mypy>=1.11.0",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "pytest-cov>=7.1.0",
    "coverage>=7.6.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=7.4.2",
    "ruff>=0.15.12",
    "mypy>=1.11.0",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",
    "pytest-cov>=7.1.0",
    "coverage>=7.6.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = false
check_untyped_defs = true
disallow_untyped_defs = false
exclude = ["tests"]

[[tool.mypy.overrides]]
module = [
    "pytesseract.*",
    "pdf2image.*",
    "fitz.*",
    "pandas.*",
    "litellm.*",
    "instructor.*"
]
ignore_missing_imports = true
